src/core/astParser.java
// $ANTLR 3.5.1 ast.g 2014-04-18 07:54:57
  
package core;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class astParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "Dec", "FUCK", "Header", 
		"Hex", "LEGEND_additive_expression", "LEGEND_and_expression", "LEGEND_arguments", 
		"LEGEND_assignment_expression", "LEGEND_assignment_operator", "LEGEND_cast_expression", 
		"LEGEND_character_constant", "LEGEND_compound_statement", "LEGEND_constant", 
		"LEGEND_constant_expression", "LEGEND_declaration", "LEGEND_declarator", 
		"LEGEND_declarators", "LEGEND_equality_expression", "LEGEND_exclusive_or_expression", 
		"LEGEND_expr1", "LEGEND_expr2", "LEGEND_expr3", "LEGEND_expression", "LEGEND_expression_statement", 
		"LEGEND_function_definition", "LEGEND_identifier", "LEGEND_inclusive_or_expression", 
		"LEGEND_init_declarator", "LEGEND_init_declarators", "LEGEND_initializer", 
		"LEGEND_integer_constant", "LEGEND_iteration_statement", "LEGEND_jump_statement", 
		"LEGEND_logical_and_expression", "LEGEND_logical_or_expression", "LEGEND_multiplicative_expression", 
		"LEGEND_parameters", "LEGEND_plain_declaration", "LEGEND_plain_declarator", 
		"LEGEND_postfix", "LEGEND_postfix_expression", "LEGEND_primary_expression", 
		"LEGEND_program", "LEGEND_relational_expression", "LEGEND_selection_statement", 
		"LEGEND_shift_expression", "LEGEND_statement", "LEGEND_string", "LEGEND_struct_or_union", 
		"LEGEND_type_name", "LEGEND_type_specifier", "LEGEND_unary_expression", 
		"LEGEND_unary_operator", "LINE_COMMENT", "Nice_character_constant", "Nice_identifier", 
		"Nice_string", "Oct", "WS", "'!'", "'!='", "'%'", "'%='", "'&&'", "'&'", 
		"'&='", "'('", "')'", "'*'", "'*='", "'+'", "'++'", "'+='", "','", "'-'", 
		"'--'", "'-='", "'->'", "'.'", "'/'", "'/='", "';'", "'<'", "'<<'", "'<<='", 
		"'<='", "'='", "'=='", "'>'", "'>='", "'>>'", "'>>='", "'['", "']'", "'^'", 
		"'^='", "'break'", "'char'", "'continue'", "'else'", "'for'", "'if'", 
		"'int'", "'return'", "'sizeof'", "'struct'", "'union'", "'void'", "'while'", 
		"'{'", "'|'", "'|='", "'||'", "'}'", "'~'"
	};
	public static final int EOF=-1;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int T__77=77;
	public static final int T__78=78;
	public static final int T__79=79;
	public static final int T__80=80;
	public static final int T__81=81;
	public static final int T__82=82;
	public static final int T__83=83;
	public static final int T__84=84;
	public static final int T__85=85;
	public static final int T__86=86;
	public static final int T__87=87;
	public static final int T__88=88;
	public static final int T__89=89;
	public static final int T__90=90;
	public static final int T__91=91;
	public static final int T__92=92;
	public static final int T__93=93;
	public static final int T__94=94;
	public static final int T__95=95;
	public static final int T__96=96;
	public static final int T__97=97;
	public static final int T__98=98;
	public static final int T__99=99;
	public static final int T__100=100;
	public static final int T__101=101;
	public static final int T__102=102;
	public static final int T__103=103;
	public static final int T__104=104;
	public static final int T__105=105;
	public static final int T__106=106;
	public static final int T__107=107;
	public static final int T__108=108;
	public static final int T__109=109;
	public static final int T__110=110;
	public static final int T__111=111;
	public static final int T__112=112;
	public static final int T__113=113;
	public static final int T__114=114;
	public static final int T__115=115;
	public static final int T__116=116;
	public static final int T__117=117;
	public static final int T__118=118;
	public static final int T__119=119;
	public static final int COMMENT=4;
	public static final int Dec=5;
	public static final int FUCK=6;
	public static final int Header=7;
	public static final int Hex=8;
	public static final int LEGEND_additive_expression=9;
	public static final int LEGEND_and_expression=10;
	public static final int LEGEND_arguments=11;
	public static final int LEGEND_assignment_expression=12;
	public static final int LEGEND_assignment_operator=13;
	public static final int LEGEND_cast_expression=14;
	public static final int LEGEND_character_constant=15;
	public static final int LEGEND_compound_statement=16;
	public static final int LEGEND_constant=17;
	public static final int LEGEND_constant_expression=18;
	public static final int LEGEND_declaration=19;
	public static final int LEGEND_declarator=20;
	public static final int LEGEND_declarators=21;
	public static final int LEGEND_equality_expression=22;
	public static final int LEGEND_exclusive_or_expression=23;
	public static final int LEGEND_expr1=24;
	public static final int LEGEND_expr2=25;
	public static final int LEGEND_expr3=26;
	public static final int LEGEND_expression=27;
	public static final int LEGEND_expression_statement=28;
	public static final int LEGEND_function_definition=29;
	public static final int LEGEND_identifier=30;
	public static final int LEGEND_inclusive_or_expression=31;
	public static final int LEGEND_init_declarator=32;
	public static final int LEGEND_init_declarators=33;
	public static final int LEGEND_initializer=34;
	public static final int LEGEND_integer_constant=35;
	public static final int LEGEND_iteration_statement=36;
	public static final int LEGEND_jump_statement=37;
	public static final int LEGEND_logical_and_expression=38;
	public static final int LEGEND_logical_or_expression=39;
	public static final int LEGEND_multiplicative_expression=40;
	public static final int LEGEND_parameters=41;
	public static final int LEGEND_plain_declaration=42;
	public static final int LEGEND_plain_declarator=43;
	public static final int LEGEND_postfix=44;
	public static final int LEGEND_postfix_expression=45;
	public static final int LEGEND_primary_expression=46;
	public static final int LEGEND_program=47;
	public static final int LEGEND_relational_expression=48;
	public static final int LEGEND_selection_statement=49;
	public static final int LEGEND_shift_expression=50;
	public static final int LEGEND_statement=51;
	public static final int LEGEND_string=52;
	public static final int LEGEND_struct_or_union=53;
	public static final int LEGEND_type_name=54;
	public static final int LEGEND_type_specifier=55;
	public static final int LEGEND_unary_expression=56;
	public static final int LEGEND_unary_operator=57;
	public static final int LINE_COMMENT=58;
	public static final int Nice_character_constant=59;
	public static final int Nice_identifier=60;
	public static final int Nice_string=61;
	public static final int Oct=62;
	public static final int WS=63;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public astParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public astParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return astParser.tokenNames; }
	@Override public String getGrammarFileName() { return "ast.g"; }


	public static class program_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "program"
	// ast.g:77:1: program : prog EOF -> ^( LEGEND_program prog ) ;
	public final astParser.program_return program() throws RecognitionException {
		astParser.program_return retval = new astParser.program_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope prog1 =null;

		CommonTree EOF2_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_prog=new RewriteRuleSubtreeStream(adaptor,"rule prog");

		try {
			// ast.g:77:9: ( prog EOF -> ^( LEGEND_program prog ) )
			// ast.g:77:11: prog EOF
			{
			pushFollow(FOLLOW_prog_in_program291);
			prog1=prog();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_prog.add(prog1.getTree());
			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_program293); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_EOF.add(EOF2);

			// AST REWRITE
			// elements: prog
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 77:20: -> ^( LEGEND_program prog )
			{
				// ast.g:77:23: ^( LEGEND_program prog )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(LEGEND_program, "LEGEND_program"), root_1);
				adaptor.addChild(root_1, stream_prog.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class prog_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "prog"
	// ast.g:79:1: prog : ( declaration | function_definition )+ ;
	public final astParser.prog_return prog() throws RecognitionException {
		astParser.prog_return retval = new astParser.prog_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope declaration3 =null;
		ParserRuleReturnScope function_definition4 =null;


		try {
			// ast.g:79:6: ( ( declaration | function_definition )+ )
			// ast.g:79:8: ( declaration | function_definition )+
			{
			root_0 = (CommonTree)adaptor.nil();


			// ast.g:79:8: ( declaration | function_definition )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=3;
				switch ( input.LA(1) ) {
				case 112:
					{
					int LA1_2 = input.LA(2);
					if ( (synpred1_ast()) ) {
						alt1=1;
					}
					else if ( (synpred2_ast()) ) {
						alt1=2;
					}

					}
					break;
				case 102:
					{
					int LA1_3 = input.LA(2);
					if ( (synpred1_ast()) ) {
						alt1=1;
					}
					else if ( (synpred2_ast()) ) {
						alt1=2;
					}

					}
					break;
				case 107:
					{
					int LA1_4 = input.LA(2);
					if ( (synpred1_ast()) ) {
						alt1=1;
					}
					else if ( (synpred2_ast()) ) {
						alt1=2;
					}

					}
					break;
				case 110:
				case 111:
					{
					int LA1_5 = input.LA(2);
					if ( (synpred1_ast()) ) {
						alt1=1;
					}
					else if ( (synpred2_ast()) ) {
						alt1=2;
					}

					}
					break;
				}
				switch (alt1) {
				case 1 :
					// ast.g:79:10: declaration
					{
					pushFollow(FOLLOW_declaration_in_prog311);
					declaration3=declaration();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, declaration3.getTree());

					}
					break;
				case 2 :
					// ast.g:79:24: function_definition
					{
					pushFollow(FOLLOW_function_definition_in_prog315);
					function_definition4=function_definition();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, function_definition4.getTree());

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					if (state.backtracking>0) {state.failed=true; return retval;}
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException e) {
			throw e;
		}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "prog"


	public static class declaration_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "declaration"
	// ast.g:81:1: declaration : type_specifier ( init_declarators )? ';' -> ^( LEGEND_declaration type_specifier ( init_declarators )? ) ;
	public final astParser.declaration_return declaration() throws RecognitionException {
		astParser.declaration_return retval = new astParser.declaration_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal7=null;
		ParserRuleReturnScope type_specifier5 =null;
		ParserRuleReturnScope init_declarators6 =null;

		CommonTree char_literal7_tree=null;
		RewriteRuleTokenStream stream_86=new RewriteRuleTokenStream(adaptor,"token 86");
		RewriteRuleSubtreeStream stream_init_declarators=new RewriteRuleSubtreeStream(adaptor,"rule init_declarators");
		RewriteRuleSubtreeStream stream_type_specifier=new RewriteRuleSubtreeStream(adaptor,"rule type_specifier");

		try {
			// ast.g:81:12: ( type_specifier ( init_declarators )? ';' -> ^( LEGEND_declaration type_specifier ( init_declarators )? ) )
			// ast.g:81:14: type_specifier ( init_declarators )? ';'
			{
			pushFollow(FOLLOW_type_specifier_in_declaration328);
			type_specifier5=type_specifier();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_type_specifier.add(type_specifier5.getTree());
			// ast.g:81:29: ( init_declarators )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==Nice_identifier||LA2_0==73) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// ast.g:81:29: init_declarators
					{
					pushFollow(FOLLOW_init_declarators_in_declaration330);
					init_declarators6=init_declarators();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_init_declarators.add(init_declarators6.getTree());
					}
					break;

			}

			char_literal7=(Token)match(input,86,FOLLOW_86_in_declaration333); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_86.add(char_literal7);

			// AST REWRITE
			// elements: init_declarators, type_specifier
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 81:51: -> ^( LEGEND_declaration type_specifier ( init_declarators )? )
			{
				// ast.g:81:54: ^( LEGEND_declaration type_specifier ( init_declarators )? )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(LEGEND_declaration, "LEGEND_declaration"), root_1);
				adaptor.addChild(root_1, stream_type_specifier.nextTree());
				// ast.g:81:90: ( init_declarators )?
				if ( stream_init_declarators.hasNext() ) {
					adaptor.addChild(root_1, stream_init_declarators.nextTree());
				}
				stream_init_declarators.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException e) {
			throw e;
		}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declaration"


	public static class function_definition_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "function_definition"
	// ast.g:83:1: function_definition : type_specifier plain_declarator '(' ( parameters )? ')' compound_statement -> ^( LEGEND_function_definition type_specifier plain_declarator ( parameters )? compound_statement ) ;
	public final astParser.function_definition_return function_definition() throws RecognitionException {
		astParser.function_definition_return retval = new astParser.function_definition_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal10=null;
		Token char_literal12=null;
		ParserRuleReturnScope type_specifier8 =null;
		ParserRuleReturnScope plain_declarator9 =null;
		ParserRuleReturnScope parameters11 =null;
		ParserRuleReturnScope compound_statement13 =null;

		CommonTree char_literal10_tree=null;
		CommonTree char_literal12_tree=null;
		RewriteRuleTokenStream stream_71=new RewriteRuleTokenStream(adaptor,"token 71");
		RewriteRuleTokenStream stream_72=new RewriteRuleTokenStream(adaptor,"token 72");
		RewriteRuleSubtreeStream stream_plain_declarator=new RewriteRuleSubtreeStream(adaptor,"rule plain_declarator");
		RewriteRuleSubtreeStream stream_type_specifier=new RewriteRuleSubtreeStream(adaptor,"rule type_specifier");
		RewriteRuleSubtreeStream stream_parameters=new RewriteRuleSubtreeStream(adaptor,"rule parameters");
		RewriteRuleSubtreeStream stream_compound_statement=new RewriteRuleSubtreeStream(adaptor,"rule compound_statement");

		try {
			// ast.g:83:20: ( type_specifier plain_declarator '(' ( parameters )? ')' compound_statement -> ^( LEGEND_function_definition type_specifier plain_declarator ( parameters )? compound_statement ) )
			// ast.g:83:22: type_specifier plain_declarator '(' ( parameters )? ')' compound_statement
			{
			pushFollow(FOLLOW_type_specifier_in_function_definition356);
			type_specifier8=type_specifier();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_type_specifier.add(type_specifier8.getTree());
			pushFollow(FOLLOW_plain_declarator_in_function_definition358);
			plain_declarator9=plain_declarator();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_plain_declarator.add(plain_declarator9.getTree());
			char_literal10=(Token)match(input,71,FOLLOW_71_in_function_definition360); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_71.add(char_literal10);

			// ast.g:83:58: ( parameters )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==102||LA3_0==107||(LA3_0 >= 110 && LA3_0 <= 112)) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// ast.g:83:58: parameters
					{
					pushFollow(FOLLOW_parameters_in_function_definition362);
					parameters11=parameters();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_parameters.add(parameters11.getTree());
					}
					break;

			}

			char_literal12=(Token)match(input,72,FOLLOW_72_in_function_definition365); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_72.add(char_literal12);
